Add WP-12 data rights operations (#78)
